# visiona

./: CMakeLists.txt  README.md  test.cpp
include/: DebugPlotConfig.h  MarkerDetectorConfig.h  Visiona.h
src/: MarkerDetector_impl.cpp  batchdetector.cpp
